@@ -45,7 +45,7 @@ sub tictactoe {
 
 sub _javascript {
     my %args = @_;
-    $args{copyright} = 'Copyright (c) Ray Toal http://jsfiddle.net/rtoal/5wKfF/';
+    $args{copyright} = 'Copyright 2016 Ray Toal http://jsfiddle.net/rtoal/5wKfF/';
     return Spreadsheet::HTML::Presets::_js_wrapper( code => _js_tmpl(), %args );
 }
 
@@ -53,7 +53,7 @@ sub _js_tmpl {
     return <<'END_JAVASCRIPT';
 
 /* install JavaScript::Minifier to minify this code */
-/* Copyright (c) Ray Toal */
+/* Copyright 2016 Ray Toal */
 /* http://jsfiddle.net/rtoal/5wKfF/ */
 
 (function () {
@@ -204,7 +204,7 @@ Jeff Anderson, C<< <jeffa at cpan.org> >>
 
 =head1 LICENSE AND COPYRIGHT
 
-Copyright 2015 Ray Toal (Javascript) and Jeff Anderson (Perl).
+Copyright 2016 Ray Toal (Javascript) and Jeff Anderson (Perl).
 
 This program is free software; you can redistribute it and/or modify it
 under the terms of the the Artistic License (2.0). You may obtain a
